app_controllers/infrastructure/kubernetes-deployments/ingress/traefik/04_deployment-docker-desktop-traefik.yml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-docker-desktop-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-docker-desktop-ingress-controller
    spec:
      serviceAccountName: traefik-docker-desktop-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-config
      containers:
      - name: traefik
        image: "traefik:1.7"
        volumeMounts:
          - mountPath: "/etc/traefik/config"
            name: config
        args:
        - --configfile=/etc/traefik/config/traefik.toml
        - --api
        - --kubernetes
        - --logLevel=DEBUG
