app_controllers/infrastructure/kubernetes-deployments/ingress/traefik/05_service-docker-desktop-traefik.yml

kind: Service
apiVersion: v1
metadata:
  name: traefik-docker-desktop-ingress-controller
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.docker-desktop.securethebox.us
spec:
  selector:
    app: traefik-docker-desktop-ingress-controller
  ports:
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
