app_controllers/infrastructure/kubernetes-deployments/ingress/traefik/06_ingress-docker-desktop-traefik.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-docker-desktop-ingress-controller
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.docker-desktop.securethebox.us
    ingress.kubernetes.io/auth-trust-headers: true
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: traefik.docker-desktop.securethebox.us
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-docker-desktop-ingress-controller
            servicePort: admin
